--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home | Spencer Chubb</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="images/avatar.jpg" />
 </head>
 
 <body id="about">
@@ -18,34 +18,25 @@
             <li><a href="resume.html">Resume</a></li>
         </ul>
     </nav>
+    <div class="stickerRow">
+        <button class="tryMeButton">Try me!</button>
+    </div>
     <main>
-        <h1>Home</h1>
-        <img src="images/avatar.jpg" />
+        <h1>Spencer Chubb</h1>
+        <img src="images/avatar.jpg" alt="Picture of me"/>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore
-            magna aliqua. Pharetra vel turpis nunc eget lorem. Commodo viverra maecenas accumsan lacus vel facilisis
-            volutpat est velit. Ipsum dolor sit amet consectetur adipiscing. Laoreet suspendisse interdum consectetur
-            libero
-            id. Blandit volutpat maecenas volutpat blandit aliquam etiam erat velit. Et sollicitudin ac orci phasellus.
-            Amet
-            consectetur adipiscing elit pellentesque. Risus ultricies tristique nulla aliquet enim tortor at. Sed nisi
-            lacus
-            sed viverra tellus in hac habitasse platea. Mi proin sed libero enim sed faucibus turpis. Consequat nisl vel
-            pretium lectus. Tortor id aliquet lectus proin nibh. Eu nisl nunc mi ipsum. Sociis natoque penatibus et
-            magnis
-            dis parturient.
+            Hi there! I'm an undergrad computer science student at Rose-Hulman. This summer (2021) I am going to be an intern
+            as an application developer at State Farm® Insurance.
         </p>
         <p>
-            Nulla facilisi nullam vehicula ipsum a arcu cursus vitae. Orci a scelerisque purus semper. At tellus at urna
-            condimentum mattis pellentesque id. Vel facilisis volutpat est velit. Blandit massa enim nec dui. Dui id
-            ornare
-            arcu odio ut sem nulla pharetra diam. Massa tempor nec feugiat nisl pretium. Id semper risus in hendrerit
-            gravida. Quam nulla porttitor massa id neque aliquam vestibulum morbi. Vehicula ipsum a arcu cursus vitae
-            congue
-            mauris rhoncus aenean. Enim lobortis scelerisque fermentum dui faucibus in. Mauris commodo quis imperdiet
-            massa.
-            Quam vulputate dignissim suspendisse in est ante.
+            I spend some of my free time working on coding projects with my friends. When we didn't have much to do
+            during the initial pandemic lockdown, my friends and I worked on a mental health startup called Hespr.
+            Another one of my biggest interests is the Rubik's Cube. I've been cubing for about 8 years, solved many
+            puzzles, and even won some competitions and awards along the way.
+        </p>
+        <p>
+            One of my favorite technologies at the moment is Flutter, which is a cross-platform UI toolkit. Hespr was
+            programmed in Flutter and I also did a hackathon project in this framework.
         </p>
     </main>
     <footer>
