--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <title>Resume | Spencer Chubb</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="images/avatar.jpg" />
 </head>
 
 <body id="resume">
@@ -21,36 +21,32 @@
     <main>
         <h1>Resume</h1>
         <h2>Education</h2>
-        <p>Bachelor of Science May 2024</p>
+        <p>B.S. in Computer Science May 2024</p>
         <p>Rose-Hulman Institute of Technology, Terre Haute, IN</p>
-        <h3>Related courses</h3>
-        <ul>
+        <p>Related courses</p>
+        <ul class="noTopMargin">
             <li>Data Structures and Algorithms Analysis</li>
             <li>Objected Oriented Software Development</li>
         </ul>
         <h2>Skills</h2>
-        <dl>
-            <dd>Software</dd>
-            <dt>Dart & Flutter, Java, Python, HTML, CSS, Javascript, C#, GitHub</dt>
-            <dd>World Languages</dd>
-            <dt>Conversational in French</dt>
-        </dl>
+        <p>Software: Dart & Flutter, Java, Python, HTML, CSS, Javascript, C#, GitHub</p>
+        <p>Conversational in French</p>
         <h2>Experience</h2>
         <p>Hespr (Mar 2020 - Dec 2020)</p>
-        <ul>
+        <ul class="noTopMargin">
             <li>Cofounded a mental health startup with my peers and served as CTO</li>
             <li>Led the development team while honing communication skills like friendliness and clarity</li>
             <li>Developed with Flutter to launch a a beta version on Android and iOS</li>
             <li>Used a NoSQL database (Firebase)</li>
         </ul>
         <p>Lifeguard (May 2019 - Aug 2019)</p>
-        <ul>
+        <ul class="noTopMargin">
             <li>Learned lifesaving skills like CPR and water rescues</li>
             <li>Learned to be empathetic yet assertive when enforcing safety measures</li>
         </ul>
         <h2>Activities</h2>
         <p>Speedcubing</p>
-        <ul>
+        <ul class="noTopMargin">
             <li>Solved a Rubik's Cube in under 6 seconds</li>
             <li>Set Illinois record in Fewest Moves Challenge</li>
         </ul>
@@ -58,7 +54,7 @@
     <footer>
         You can email me at spencerchubb@gmail.com
     </footer>
-    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
 </body>
 
 </html>
