--- a/index.html
+++ b/index.html
@@ -4,45 +4,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home | Spencer Chubb</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" href="images/avatar.jpg" />
+    <title>Home | Spencer Chubb</title>
 </head>
 
-<body id="about">
-    <nav>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="resume.html">Resume</a></li>
-        </ul>
-    </nav>
-    <div class="stickerRow">
-        <button class="tryMeButton">Try me!</button>
-    </div>
-    <main>
-        <h1>Spencer Chubb</h1>
-        <img src="images/avatar.jpg" alt="Picture of me"/>
-        <p>
-            Hi there! I'm an undergrad computer science student at Rose-Hulman. This summer (2021) I am going to be an intern
-            as an application developer at State Farm® Insurance.
-        </p>
-        <p>
-            I spend some of my free time working on coding projects with my friends. When we didn't have much to do
-            during the initial pandemic lockdown, my friends and I worked on a mental health startup called Hespr.
-            Another one of my biggest interests is the Rubik's Cube. I've been cubing for about 8 years, solved many
-            puzzles, and even won some competitions and awards along the way.
-        </p>
-        <p>
-            One of my favorite technologies at the moment is Flutter, which is a cross-platform UI toolkit. Hespr was
-            programmed in Flutter and I also did a hackathon project in this framework.
-        </p>
-    </main>
-    <footer>
-        You can email me at spencerchubb@gmail.com
-    </footer>
-    <script src="scripts/main.js"></script>
+<body>
+    <h1>Spencer Chubb</h1>
+    <a href="resume.html">Resume</a>
+    <a href="https://cubingapp.com">Cubing App</a>
+    <a href="https://twitter.com/spencer_chubb">Twitter</a>
+    <a href="https://github.com/spencerchubb">GitHub</a>
+    <a href="https://github.com/spencerchubb/spencerchubb.github.io">Repo for this site</a>
 </body>
 
 </html>
