--- a/resume.html
+++ b/resume.html
@@ -4,57 +4,28 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Resume | Spencer Chubb</title>
-    <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="icon" href="images/avatar.jpg" />
+    <title>Resume | Spencer Chubb</title>
 </head>
 
-<body id="resume">
-    <nav>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="resume.html">Resume</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h1>Resume</h1>
-        <h2>Education</h2>
-        <p>B.S. in Computer Science May 2024</p>
-        <p>Rose-Hulman Institute of Technology, Terre Haute, IN</p>
-        <p>Related courses</p>
-        <ul class="noTopMargin">
-            <li>Data Structures and Algorithms Analysis</li>
-            <li>Objected Oriented Software Development</li>
-        </ul>
-        <h2>Skills</h2>
-        <p>Software: Dart & Flutter, Java, Python, HTML, CSS, Javascript, C#, GitHub</p>
-        <p>Conversational in French</p>
-        <h2>Experience</h2>
-        <p>Hespr (Mar 2020 - Dec 2020)</p>
-        <ul class="noTopMargin">
-            <li>Cofounded a mental health startup with my peers and served as CTO</li>
-            <li>Led the development team while honing communication skills like friendliness and clarity</li>
-            <li>Developed with Flutter to launch a a beta version on Android and iOS</li>
-            <li>Used a NoSQL database (Firebase)</li>
-        </ul>
-        <p>Lifeguard (May 2019 - Aug 2019)</p>
-        <ul class="noTopMargin">
-            <li>Learned lifesaving skills like CPR and water rescues</li>
-            <li>Learned to be empathetic yet assertive when enforcing safety measures</li>
-        </ul>
-        <h2>Activities</h2>
-        <p>Speedcubing</p>
-        <ul class="noTopMargin">
-            <li>Solved a Rubik's Cube in under 6 seconds</li>
-            <li>Set Illinois record in Fewest Moves Challenge</li>
-        </ul>
-    </main>
-    <footer>
-        You can email me at spencerchubb@gmail.com
-    </footer>
-    <!-- <script src="scripts/main.js"></script> -->
+<body>
+    <h1>Resume</h1>
+    <h2>Education</h2>
+    <ul>
+        <li>B.S. in Computer Science from Rose-Hulman Institute of Technology</li>
+        <li>Will graduate in May 2024</li>
+    </ul>
+    <h2>Projects</h2>
+    <ul>
+        <li><a href="https://cubingapp.com">Cubing App</a></li>
+    </ul>
+    <h2>Experience</h2>
+    <ul>
+        <li>Data Science Intern at State Farm (Summer 2022)</li>
+        <li>Application Development Intern at State Farm (Summer 2021)</li>
+        <li>Lifeguard (May 2019 - Aug 2019)</li>
+    </ul>
 </body>
 
 </html>
