--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" href="images/avatar.jpg" />
+    <link rel="icon" href="images/avatar.png" />
     <title>Resume | Spencer Chubb</title>
 </head>
 
