start elections page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" href="images/avatar.png" />
+    <link rel="icon" href="images/favicon.png" />
     <title>Home | Spencer Chubb</title>
 </head>
 
@@ -16,6 +16,11 @@
     <a href="https://twitter.com/spencer_chubb">Twitter</a>
     <a href="https://github.com/spencerchubb">GitHub</a>
     <a href="https://github.com/spencerchubb/spencerchubb.github.io">Repo for this site</a>
+
+    <h2>Blog Posts</h2>
+    <ul>
+        <li><a href="elections.html">Elections</a></li>
+    </ul>
 </body>
 
 </html>
