--- a/elections.html
+++ b/elections.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="https://github.com/spencerchubb/spencerchubb.github.io">Repo</a>
+        <a href="disclaimer.html">Disclaimer</a>
+    </nav>
     <h1>Elections</h1>
     <h2>Resources</h2>
     <ul>
