--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <nav>
+        <a href="index.html">Home</a>
+    </nav>
     <h1>Resume</h1>
     <h2>Education</h2>
     <ul>
