--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h2>Blog Posts</h2>
     <ul>
-        <li><a href="elections.html">Elections</a></li>
+        <li><a href="elections.html">Voting</a></li>
     </ul>
 </body>
 
