--- a/voting.html
+++ b/voting.html
@@ -73,6 +73,43 @@
             </tr>
         </tbody>
     </table>
+    <h2>More Criterion</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Criterion</th>
+                <th>Definition</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Majority criterion</td>
+                <td>If an option is ranked first by more than half of voters, then that option wins</td>
+            </tr>
+            <tr>
+                <td>Mutual majority</td>
+                <td>
+                    You can think of this as a generalized form of the majority criterion. 
+                    If there is a subset S of the candidates, such that more than half of voters prefer the options in S, then the winner is in S.
+                </td>
+            </tr>
+            <tr>
+                <td>Condorcet winner criterion</td>
+                <td>If the <a href="https://en.wikipedia.org/wiki/Condorcet_method">Condorcet winner</a> exists, then it is chosen</td>
+            </tr>
+            <tr>
+                <td>Condorcet loser criterion</td>
+                <td>A <a href="https://en.wikipedia.org/wiki/Condorcet_method">Condorcet loser</a> is not chosen</td>
+            </tr>
+            <tr>
+                <td>Indpendence of clones criterion</td>
+                <td>
+                    The winner must not change due to the addition of an option that is similar to an existing option. 
+                    See more about <a href="https://en.wikipedia.org/wiki/Vote_splitting">vote splitting</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 
 </html>
