--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h2>Blog Posts</h2>
     <ul>
-        <li><a href="elections.html">Voting</a></li>
+        <li><a href="voting.html">Voting</a></li>
         <li><a href="effective_altruism.html">Effective Altruism</a></li>
     </ul>
 </body>
