--- a/effective_altruism.html
+++ b/effective_altruism.html
@@ -34,7 +34,7 @@
         For example, preparing for future pandemics is a good thing to do.
         However, our capitalist system does not provide the incentives for individuals or corporations to prepare properly.
         Likewise, the government is too inefficient to prepare for pandemics.
-        There, an effective altruist would argue that philanthropy is the solution.
+        Therefore, an effective altruist would argue that philanthropy is the solution.
     </p>
     <p>
         I don't find this solution convincing.
