--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <ul>
         <li><a href="voting.html">Voting</a></li>
         <li><a href="effective_altruism.html">Effective Altruism</a></li>
+        <li><a href="ar.html">AR Glasses</a></li>
     </ul>
 </body>
 
