--- a/ar.html
+++ b/ar.html
@@ -40,6 +40,7 @@
         The software would be able to draw UI components that interact with the environment.
         For example, it could display information about anything you want to know about.
         Information about people, buildings, and objects could be embedded next to them.
+        Map software could be overlay your route on the road so you don't have to look back and forth between the map and the road.
     </p>
     <p>
         The available area for UI would be much larger than a phone or desktop.
