--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <h2>Blog Posts</h2>
     <ul>
+        <li><a href="find_favorite_taylor_album.html">Find Favorite Taylor Album</a></li>
         <li><a href="neural_net.html">How Neural Networks Work</a></li>
         <li><a href="voting.html">Voting</a></li>
         <li><a href="effective_altruism.html">Effective Altruism</a></li>
