--- a/find_favorite_taylor_album.html
+++ b/find_favorite_taylor_album.html
@@ -388,6 +388,7 @@
                     "Glitch",
                     "Would've Could've Should've",
                     "Dear Reader",
+                    "Hits Different",
                 ],
             },
         ];
