--- a/taylor_album_results.html
+++ b/taylor_album_results.html
@@ -297,6 +297,7 @@
                     "Glitch",
                     "Would've Could've Should've",
                     "Dear Reader",
+                    "Hits Different",
                 ],
             },
         ];
