--- a/resume.html
+++ b/resume.html
@@ -22,6 +22,18 @@
     <h2>Projects</h2>
     <ul>
         <li><a href="https://cubingapp.com">Cubing App</a></li>
+        <ul>
+            <li>Web app for learning and practicing the Rubik's Cube</li>
+        </ul>
+        <li><a href="find_favorite_taylor_album.html">Find Favorite Taylor Swift Album</a></li>
+        <ul>
+            <li>Rate Taylor's songs, and then we calculate your favorite album</li>
+            <li>Got near the top of the TaylorSwift community on Reddit (<a href="https://www.reddit.com/r/TaylorSwift/comments/z6xpf5/rate_taylors_songs_to_find_your_fav_album/">here</a>)</li>
+            <li>
+                Made a Reddit post and got feedback on a prototype, then made v1 of the site.
+                Once the site was done, I kept getting more feedback on the post and iterating.
+            </li>
+        </ul>
     </ul>
     <h2>Experience</h2>
     <ul>
