blog post for taylor project

--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 <body>
     <h1>Spencer Chubb</h1>
     <a href="resume.html">Resume</a>
-    <a href="https://cubingapp.com">Cubing App</a>
     <a href="https://twitter.com/spencer_chubb">Twitter</a>
     <a href="https://github.com/spencerchubb">GitHub</a>
     <a href="https://github.com/spencerchubb/spencerchubb.github.io">Repo for this site</a>
 
+    <h2>Projects</h2>
+    <ul>
+        <li><a href="https://cubingapp.com">Cubing App</a></li>
+        <li><a href="find_favorite_taylor_album.html">Find Favorite Taylor Album</a></li>
+    </ul>
+
     <h2>Blog Posts</h2>
     <ul>
-        <li><a href="find_favorite_taylor_album.html">Find Favorite Taylor Album</a></li>
+        <li><a href="taylor_project.html">The Taylor Swift Subreddit Loved My Project</a></li>
+        <li><a href="bitcoin.html">How Bitcoin Works</a></li>
         <li><a href="neural_net.html">How Neural Networks Work</a></li>
         <li><a href="voting.html">Voting</a></li>
         <li><a href="effective_altruism.html">Effective Altruism</a></li>
