economy is neural net

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 
     <h2>Blog Posts</h2>
     <ul>
-        <li><a href="taylor_project.html">The Taylor Swift Subreddit Loved My Project</a></li>
-        <li><a href="bitcoin.html">How Bitcoin Works</a></li>
-        <li><a href="neural_net.html">How Neural Networks Work</a></li>
-        <li><a href="voting.html">Voting</a></li>
-        <li><a href="effective_altruism.html">Effective Altruism</a></li>
-        <li><a href="ar.html">AR Glasses</a></li>
+        <li><a href="./economy_is_neural_net.html">The Economy is a Neural Network</a></li>
+        <li><a href="./taylor_project.html">The Taylor Swift Subreddit Loved My Project</a></li>
+        <li><a href="./bitcoin.html">How Bitcoin Works</a></li>
+        <li><a href="./neural_net.html">How Neural Networks Work</a></li>
+        <li><a href="./voting.html">Voting</a></li>
+        <li><a href="./effective_altruism.html">Effective Altruism</a></li>
+        <li><a href="./ar.html">AR Glasses</a></li>
     </ul>
 </body>
 
