start jargon list

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./taylor_project.html">The Taylor Swift Subreddit Loved My Project</a></li>
         <li><a href="./bitcoin.html">How Bitcoin Works</a></li>
         <li><a href="./neural_net.html">How Neural Networks Work</a></li>
+        <li><a href="./jargon.html">My Jargon Pet Peeves</a></li>
         <li><a href="./voting.html">Voting</a></li>
         <li><a href="./effective_altruism.html">Effective Altruism</a></li>
         <li><a href="./ar.html">AR Glasses</a></li>
