--- a/index.html
+++ b/index.html
@@ -11,28 +11,63 @@
 
 <body>
     <h1>Spencer Chubb</h1>
-    <a href="resume.html">Resume</a>
-    <a href="https://twitter.com/spencer_chubb">Twitter</a>
-    <a href="https://github.com/spencerchubb">GitHub</a>
-    <a href="https://github.com/spencerchubb/spencerchubb.github.io">Repo for this site</a>
+    <p>Looking for software positions! Senior in college, graduating in May</p>
 
     <h2>Projects</h2>
     <ul>
-        <li><a href="https://cubingapp.com">Cubing App</a></li>
-        <li><a href="find_favorite_taylor_album.html">Find Favorite Taylor Album</a></li>
+        <li><a href="https://cubingapp.com">cubingapp.com</a> (My personal fav project)</li>
+        <ul>
+            <li>Website for rubiks cubers</li>
+            <li><b>3,000</b> monthly unique users and <b>20,000</b> monthly visits</li>
+            <li>Tech stack: PHP, SQLite, Ubuntu, and C for high-performance aspects</li>
+        </ul>
+        <li>Undergrad thesis: Improving auctions with neural networks</li>
+        <ul>
+            <li>Increased efficiency by 0.7%, could yield extra <b>$140 million</b> if used in practice</li>
+            <li>The improvement is due to using a unified neural network instead of disjoint neural networks</li>
+            <li>Trained neural nets with pytorch</li>
+        </ul>
+        <li>AI Academic Adivsor</li>
+        <ul>
+            <li>Used LLMs and RAG to build chatbot that knows everything about my school, Rose-Hulman</li>
+        </ul>
+        <li><a href="find_favorite_taylor_album.html">Calculate Favorite Taylor Swift Album</a></li>
+        <ul>
+            <li>Got <b>150 people</b> to try it <a href="https://www.reddit.com/r/TaylorSwift/comments/z6xpf5/rate_taylors_songs_to_find_your_fav_album/">via Reddit</a></li>
+        </ul>
+        <ul></ul>
     </ul>
 
-    <h2>Blog Posts</h2>
+    <h2>Experience</h2>
     <ul>
-        <li><a href="./economy_is_neural_net.html">The Economy is a Neural Network</a></li>
-        <li><a href="./taylor_project.html">The Taylor Swift Subreddit Loved My Project</a></li>
-        <li><a href="./bitcoin.html">How Bitcoin Works</a></li>
-        <li><a href="./neural_net.html">How Neural Networks Work</a></li>
-        <li><a href="./jargon.html">My Jargon Pet Peeves</a></li>
-        <li><a href="./voting.html">Voting</a></li>
-        <li><a href="./effective_altruism.html">Effective Altruism</a></li>
-        <li><a href="./ar.html">AR Glasses</a></li>
+        <li><b>State Farm 2023 Internship</b></li>
+        <ul>
+            <li>Built automated data test to reduce testing time from <b>10 minutes to 1 minute</b></li>
+            <li>Provisioned services with Terraform, GitLab CI/CD, and Linux</li>
+        </ul>
+        <li><b>State Farm 2022 Internship</b></li>
+        <ul>
+            <li>Developed an internal database admin tool using React and AWS</li>
+        </ul>
     </ul>
+
+    <h2>My ideal job</h2>
+    <ul>
+        <li>Fast-moving startup</li>
+        <li>Learn a lot</li>
+        <li>In person</li>
+        <li>Using AI & LLMs would be cool</li>
+    </ul>
+
+    <h2>Contact</h2>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/spencerchubb">LinkedIn</a></li>
+        <li>
+            <p style="margin: 0;">spencerchubb at gmail dot com</p>
+        </li>
+    </ul>
+
+    <p>Please reach out if I could be a fit for your company, or even if you just want to chat about cool tech stuff! I can talk for hours about rubiks cubes, my undergrad thesis, and LLMs.</p>
 </body>
 
 </html>
