--- a/index.html
+++ b/index.html
@@ -11,63 +11,53 @@
 
 <body>
     <h1>Spencer Chubb</h1>
-    <p>Looking for software positions! Senior in college, graduating in May</p>
+
+    <p>
+        When I'm not clocked in at State Farm, I'm probably building stuff. I wrangle data by day and wield neural networks by night.
+    </p>
 
     <h2>Projects</h2>
     <ul>
         <li><a href="https://cubingapp.com">cubingapp.com</a> (My personal fav project)</li>
         <ul>
             <li>Website for rubiks cubers</li>
-            <li><b>3,000</b> monthly unique users and <b>20,000</b> monthly visits</li>
-            <li>Tech stack: PHP, SQLite, Ubuntu, and C for high-performance aspects</li>
+            <li>3.6k monthly users and 22k monthly page views</li>
+            <li><a href="https://cubingapp.com/name-ranks/?name=spencer">I am the fastest cuber in the world named Spencer</a></li>
+        </ul>
+        <li>AI Voice Chat</li>
+        <ul>
+            <li>In progress</li>
+            <li>1 user (my 7 year old brother in law)</li>
+            <li>Uses speech-to-text, LLM, and text-to-speech APIs</li>
         </ul>
         <li>Undergrad thesis: Improving auctions with neural networks</li>
         <ul>
-            <li>Increased efficiency by 0.7%, could yield extra <b>$140 million</b> if used in practice</li>
-            <li>The improvement is due to using a unified neural network instead of disjoint neural networks</li>
-            <li>Trained neural nets with pytorch</li>
-        </ul>
-        <li>AI Academic Adivsor</li>
-        <ul>
-            <li>Used LLMs and RAG to build chatbot that knows everything about my school, Rose-Hulman</li>
+            <li>Increased efficiency by using a unified neural network (prior work used separate network for each auction bidder)</li>
+            <li>Trained feedforward networks and CNNs with pytorch</li>
+            <li>Maximize auction efficiency with cplex library which uses mixed integer programming</li>
         </ul>
         <li><a href="find_favorite_taylor_album.html">Calculate Favorite Taylor Swift Album</a></li>
         <ul>
-            <li>Got <b>150 people</b> to try it <a href="https://www.reddit.com/r/TaylorSwift/comments/z6xpf5/rate_taylors_songs_to_find_your_fav_album/">via Reddit</a></li>
-        </ul>
-        <ul></ul>
-    </ul>
-
-    <h2>Experience</h2>
-    <ul>
-        <li><b>State Farm 2023 Internship</b></li>
-        <ul>
-            <li>Built automated data test to reduce testing time from <b>10 minutes to 1 minute</b></li>
-            <li>Provisioned services with Terraform, GitLab CI/CD, and Linux</li>
-        </ul>
-        <li><b>State Farm 2022 Internship</b></li>
-        <ul>
-            <li>Developed an internal database admin tool using React and AWS</li>
+            <li>Number of users: ~150 (conservative estimate because it only includes people who <a href="https://www.reddit.com/r/TaylorSwift/comments/z6xpf5/rate_taylors_songs_to_find_your_fav_album/">people who commented their results</a>)</li>
         </ul>
     </ul>
 
-    <h2>My ideal job</h2>
+    <h2>Highlights from State Farm</h2>
+    <p>Not an exhaustive list</p>
     <ul>
-        <li>Fast-moving startup</li>
-        <li>Learn a lot</li>
-        <li>In person</li>
-        <li>Using AI & LLMs would be cool</li>
+        <li>Doing a lot of work with PySpark and AWS Glue</li>
+        <li>Made one of our data jobs 10x faster (180 minutes to 18 minutes)</li>
+        <li>Improved queuing because our old queue couldn't scale beyond ~50 jobs</li>
+        <li>Deploying AWS resources with Terraform and GitLab CI/CD</li>
     </ul>
 
     <h2>Contact</h2>
     <ul>
         <li><a href="https://www.linkedin.com/in/spencerchubb">LinkedIn</a></li>
         <li>
-            <p style="margin: 0;">spencerchubb at gmail dot com</p>
+            <p style="margin: 0;">spencerchubb@gmail.com</p>
         </li>
     </ul>
-
-    <p>Please reach out if I could be a fit for your company, or even if you just want to chat about cool tech stuff! I can talk for hours about rubiks cubes, my undergrad thesis, and LLMs.</p>
 </body>
 
 </html>
